client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    html {
        @apply scroll-smooth;
    }
    h3,
    h4,
    h5,
    h6 {
        @apply break-all;
    }
    a {
        @apply cursor-pointer;
    }
    body {
        @apply text-muted-brown;
    }
    img {
        @apply max-w-full;
    }
    header {
        @apply pb-6 md:py-6 lg:py-8;
    }
    nav {
        @apply flex justify-between items-center;
    }

    nav h2 {
        @apply text-2xl md:text-3xl font-bold;
    }
    main {
        @apply w-[90%] mx-auto min-h-[80vh];
    }
    input[type="checkbox"],
    input[type="radio"] {
        @apply appearance-none cursor-pointer w-3 h-3 lg:w-4 lg:h-4 bg-transparent border border-brown-darker checked:bg-brown-darker mr-1;
    }
    input[type="checkbox"] {
        @apply rounded-sm;
    }
    input[type="radio"] {
        @apply rounded-full;
    }
    label {
        @apply text-sm font-bold;
    }
}
@layer utilities {
    .link {
        @apply font-semibold cursor-pointer lg:hover:underline;
    }
    .container {
        @apply w-[92%] md:w-[90%] max-w-full mx-auto;
    }
    .auth-container {
        @apply flex flex-col lg:flex-row min-h-[80vh] mx-auto md:justify-center items-center;
    }
    .auth-form-container {
        @apply mx-auto mt-12 lg:mt-0 mb-8 max-w-md;
    }
    .form-title {
        @apply font-bold text-2xl lg:text-3xl text-brown;
    }
    .active-nav-link {
        @apply text-yellow;
    }
    .test-option {
        @apply font-normal text-base;
    }
    #tsparticles {
        position: fixed;
        height: 100%;
        width: 100%;
        margin: 0;
        padding: 0;
        left: 0;
        top: 0;
        z-index: -1;
    }
    ::-webkit-scrollbar {
        @apply w-1 h-1;
    }
    ::-webkit-scrollbar-track {
        @apply bg-brown bg-opacity-10 rounded-md;
    }
    ::-webkit-scrollbar-thumb {
        @apply bg-brown rounded-md;
    }
}

@layer components {
    .btn {
        @apply text-light-brown bg-brown py-2 px-8 lg:px-10 h-auto rounded-lg hover:bg-brown-darker  cursor-pointer text-sm;
    }
    .btn--light {
        @apply bg-light-brown text-brown;
    }
    .btn--link {
        @apply text-sm bg-light-brown text-brown hover:bg-light-brown-h font-bold uppercase px-5 py-1;
    }
    .btn--pagination {
        @apply py-2 px-4 border bg-transparent border-brown text-brown rounded-lg h-auto cursor-pointer text-sm;
    }
    .btn--pagination-active {
        @apply bg-brown text-light-brown;
    }
    .line-input {
        @apply w-full bg-transparent border-brown border-b-[1px] outline-none pb-2 placeholder-muted-brown text-brown placeholder-opacity-75 focus:placeholder-opacity-0;
    }
    .question-card {
        @apply max-w-[1200px] mx-auto flex flex-col items-center justify-center min-h-[70vh] text-brown  rounded-md bg-light-brown bg-opacity-40;
    }
    .edit-form {
        @apply max-w-[1200px] mx-auto  md:p-5 xl:p-8  rounded-md mt-4 lg:mt-10 bg-opacity-80;
    }
    .preview-card-container {
        @apply grid lg:grid-cols-2 xl:grid-cols-3 gap-3 lg:gap-4;
    }
    .preview-card-container li {
        @apply overflow-hidden;
    }
    .preview-card {
        @apply border border-brown p-5 rounded-md;
    }
    .preview-card p {
        @apply truncate;
    }
    .tag {
        @apply uppercase inline-block text-xs text-light-brown py-1 px-2 rounded-md  font-semibold;
    }
}

.Toastify__toast {
    color: white !important;
    background: #423e37 !important;
}

.Toastify__close-button {
    color: white !important;
}

.flip-card {
    @apply max-w-[1200px];
    perspective: 8000px;
}

.flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

.flip-card.is-flipped .flip-card-inner {
    transform: rotateY(180deg);
}

.flip-card-front,
.flip-card-back {
    @apply text-center p-5 md:p-8 xl:p-12;
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
}

.flip-card-front {
    @apply mx-auto flex flex-col items-center justify-center min-h-[70vh] text-brown rounded-md bg-light-brown bg-opacity-40;
}

.flip-card-back {
    @apply mx-auto flex flex-col items-center justify-center min-h-[70vh] text-brown rounded-md bg-light-brown bg-opacity-40;
    transform: rotateY(180deg);
}

.slide-in-down {
    animation: slideInDown 0.5s ease;
}

@keyframes slideInDown {
    0% {
        transform: translateY(-30%);
    }
    100% {
        transform: translateY(0);
    }
}

.slide-in-up {
    animation: slideInUp 0.5s ease;
}

@keyframes slideInUp {
    0% {
        transform: translateY(40%);
    }
    100% {
        transform: translateY(0);
    }
}

.fade-in {
    opacity: 0;
    animation-name: fade-in;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
}

@keyframes fade-in {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.fade-out {
    animation-name: fadeOut;
    animation-duration: 0.15s;
}

@keyframes fadeOut {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}

